--- a/res/gfx/tutorial.css
+++ b/res/gfx/tutorial.css
@@ -9,15 +9,15 @@ img
 
 ol, ul
 {
-	font-family: Verdana;
-	font-size: 20px;
+	font-family: Arial;
+	font-size: 16px;
 	padding: 0px 10px 0px 10px;
 }
 
 h1
 {
-	font-family: Verdana;
-	font-size: 30px;
+	font-family: Arial;
+	font-size: 24px;
 	padding: 0px 10px 0px 10px;
 	text-decoration: underline;
 }
